--- a/StockMarket/StockMarket.csproj
+++ b/StockMarket/StockMarket.csproj
@@ -62,6 +62,15 @@
     <Compile Include="StocksWindow.xaml.cs">
       <DependentUpon>StocksWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Views\CashFlowUI.xaml.cs">
+      <DependentUpon>CashFlowUI.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\GetStockPriceUI.xaml.cs">
+      <DependentUpon>GetStockPriceUI.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\StocksPage.xaml.cs">
+      <DependentUpon>StocksPage.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -76,6 +85,18 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="StocksWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\CashFlowUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\GetStockPriceUI.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\StocksPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -107,6 +128,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="Models\" />
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Images\USER.jpeg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
